plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.7'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.arepabuelas'
version = '0.0.1-SNAPSHOT'
description = 'Arepabuelas E-commerce Backend'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// --- Spring Boot Core ---
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// --- Base de datos ---
	runtimeOnly 'org.postgresql:postgresql' // o usa 'mysql:mysql-connector-j' si prefieres MySQL

	// --- Lombok ---
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// --- Uploads y JSON ---
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf' // si usas vistas
	implementation 'com.fasterxml.jackson.core:jackson-databind'

	// --- JWT (para autenticación segura) ---
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// --- Cifrado / Seguridad extra ---
	implementation 'org.springframework.security:spring-security-crypto'

	// --- Logs y debugging ---
	implementation 'org.springframework.boot:spring-boot-starter-logging'

	// --- Test ---
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
